fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -247,14 +247,9 @@ nav .home-link{
 
 
 .bannerDisplay-container{
-  padding: 30px;
+  padding: 30px 40px;
   margin-top: 70px;
   background-color: var(--gray2);
-}
-
-.timberland{
-  margin-top: -100px;
-  max-width: 400px;
 }
 
 .shopnow{
@@ -296,6 +291,12 @@ nav .home-link{
   font-weight: 400;
   font-family: Pacifico;
   color: var(--blue);
+}
+@media (max-width:450px) {
+  .text4 {
+  font-size: 4rem;
+
+}
 }
 
 .natural{
@@ -342,9 +343,15 @@ nav .home-link{
 .shoe-btn{
   flex-direction: column;
 }
+.tim{
+  position: relative;
+}
 .timberland{
   margin: 0 auto;
-  margin-top: -30px;
+  margin-top: 0px;
+  right: 60px;
+  width: 100%;
+
 }
 .sign-btn{
   display: flex;
@@ -353,7 +360,6 @@ nav .home-link{
   width: 60px;
 }
 }
-
 
 .Frame1{
   width: 100%;
@@ -521,19 +527,19 @@ footer{
   align-items: center;
   display: flex;
   position: relative;
-  flex-wrap: wrap;
   border-radius: 40px;
   background-color: var(--gray3);
   width: 400px;
-  height: 50px;
   margin-top: 40px;
 }
-
 .footer-div{
   display: flex;
   justify-content: space-around;
 }
-
+.footer-logo{
+  display: flex;
+  align-items: center;
+}
 .footer-text a{
   color: var(--gray3);
   font-family: inter;
@@ -575,6 +581,21 @@ footer{
   margin: 30px;
 }
 }
+
+/* @media (max-width:450px) {
+  .footer-logo{
+    flex-direction: column;
+    margin: 30px
+  }
+  .footer-div{
+    flex-direction: column;
+  }
+  footer{
+    max-width: 100%;
+  }
+} */
+
+
 @media (max-width:450px) {
 .input-div{
   width: 300px;
@@ -727,8 +748,9 @@ footer{
   justify-content: center;
 }
 .juniorseries{
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
+  width: 80%;
 }
 
 .sandals-link:active{
